<resources>
    <!-- String Resources -->
    <!-- General Use String -->

    <!-- Main Activity and Launch Strings -->
    <string name="app_name">ScheduleU</string>
    <string name="android_version_code">1</string>
    <string name="android_version_name">1.0</string>
    <string name="action_settings">Settings</string>
    <string name="schedule_summary_title">Schedule Summary</string>
    <string name="current_term_label">Current Term</string>
    <string name="coming_up_label">Coming Up</string>
    <string name="app_cancel_warning">Discard changes?</string>
    <string name="start_date_label">Start Date</string>
    <string name="end_date_label">End Date</string>
    <string name="date_label">Date</string>
    <string name="date_edit_hint">Click to select a date</string>

    <!-- Term Activity Strings -->
    <string name="term_activity_label">Terms</string>
    <string name="add_term">Add Term</string>
    <string name="component_term_name_label">Term Name</string>
    <string name="component_term_name_hint">Enter a term name</string>
    <string name="component_term_status_hint">Select a term status</string>
    <string name="pick_date_spoken">Pick A Date</string>
    <string name="pick_start_date_spoken">Pick Start Date</string>
    <string name="pick_end_date_spoken">Pick End Date</string>
    <string name="no_term_name">No Term Name</string>
    <string name="no_term_id">No Term id</string>

    <!-- Course Activity Strings -->
    <string name="course_activity_label">Courses</string>
    <string name="add_course">Add Course</string>
    <string name="component_course_name_label">Course Name</string>
    <string name="component_course_name_hint">Enter a course name</string>
    <string name="component_course_match_term_dates">Match Term Date</string>
    <string name="component_course_status_hint">Select a course status</string>
    <string name="no_course_name">No Course Name</string>
    <string name="no_course_id">No Course id</string>

    <!-- Assessment Activity Strings -->
    <string name="assessment_activity_label">Assessments</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="component_assessment_name_label">Assessment Name/ID</string>
    <string name="component_assessment_name_hint">Enter a name or ID</string>
    <string name="use_date_range_label">Use Date Range</string>
    <string name="component_assessment_date_label">Assessment Date</string>
    <string name="component_assessment_start_date_label">Start Date</string>
    <string name="component_assessment_end_date_label">End Date</string>
    <string name="component_assessment_start_time_label">Start Time</string>
    <string name="component_assessment_close_time_label">Close Time</string>
    <string name="component_assessment_status_hint">Select an assessment status</string>
    <string name="no_assessment_name">No Assessment Name</string>
    <string name="no_assessment_id">No Assessment id</string>

    <!-- Instructor Strings -->
    <string name="add_instructor">Click To Add</string>
    <string name="no_instructor_name">No Instructor Name</string>
    <string name="no_instructor_id">No Instructor id</string>
    <string name="first_name">Instructor First Name</string>
    <string name="last_name">Instructor Last Name</string>
    <string name="instructor_name_component_label">Instructor Name</string>
    <string name="email_component_label">Instructor Email</string>
    <string name="phone_component_label">Instructor Phone Number</string>
    <string name="instructor_choose_name_hint">Chose course instructor</string>
    <string name="instructor_first_name_hint">First Name</string>
    <string name="instructor_last_name_hint">Last Name</string>
    <string name="instructor_email_hint">Email Address</string>
    <string name="instructor_phone_hint">Phone Number</string>

    <!-- Note Component Strings -->
    <string name="note_hint_string">Optional note…</string>

    <!-- Utility Component Strings -->
    <!-- Alarm Strings -->
    <string name="channel_name">schedule_u_channel</string>
    <string name="channel_description">schedule_u_notification_scheduler</string>

    <!-- Global Resource Strings -->
    <!-- Buttons/Labels/Widgets Strings -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="select">Select</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="warning">Warning</string>
    <string name="overwrite_warning">Overwrite Warning</string>
    <string name="delete_warning">Deletion Warning</string>
    <string name="no_hint_set">No Hint Set</string>
    <string name="no_label_text_set">No Label Set</string>
    <string name="confirm_overwrite">Overwrite updated fields?</string>
    <string name="overwrite_dialog_message">Record already exists, overwrite? OK to overwrite, Cancel to discard</string>
    <string name="delete_dialog_message">Confirm delete item? This cannot be undone! OK to continue, Cancel to go back</string>
    <string name="spinner_selection_hint">Select a status. . .</string>
    <string name="no_email_provided">no_email_provided</string>
    <string name="no_phone_number">no_number_provided</string>
    <string name="match_term_date_range">Match Term Date Range</string>
    <string name="term_details_widget_description">This widget retrieves and displays a term\'s detailed information</string>

</resources>